# NEW_BUS_MOD_DB

./: .gitignore  README.md  capex.py  cashflow.py  defaults.py  energy.py  location.py  params.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  streamlit_viewer_app.py  tariffs_tou.py  test_monte_carlo.py  test_parity.py
Dashboard_LaaS_vs_NYTG/: .~Trust_to_LaaS_Investment_Model_EN_WPS.xlsx  Trust_to_LaaS_Investment_Model_CN.xlsx  Trust_to_LaaS_Investment_Model_CN_WPS.xlsx  Trust_to_LaaS_Investment_Model_EN.xlsx  Trust_to_LaaS_Investment_Model_EN_WPS.xlsx  Trust_to_LaaS_Offer_Envelope.xlsx  Trust_to_LaaS_Offer_Envelope_CN.xlsx  __init__.py  add_qualitative_and_sensitivity_sheets.py  evidence_cn.py  excel_frontier_export.py  excel_frontier_export_en.py  excel_investment_model.py  excel_investment_model_wps.py  excel_template_fill_wps.py  laas_feasible.py  metrics.py  models.py  product_profiles.py  provenance.py  report.py  roadlight_data.py  tier_dashboard_data.py  workbook_extract.py  通用版_能源托管_vs_LaaS_财务模型_v3_逻辑复核版.xlsx
business_model_comparison/: __init__.py  add_qualitative_and_sensitivity_sheets.py  excel_frontier_export.py  four_model_english.xlsx  laas_feasible.py  make_owner_npv_mode_b.py  metrics.py  models.py  provenance.py  report.py  roadlight_data.py  roadlight_four_models_owner_fixed_cn_yearly_diff.xlsx  roadlight_four_models_owner_fixed_cn_yearly_diff_cn_backup.xlsx  roadlight_four_models_owner_fixed_cn_yearly_diff_cn_v2.xlsx  roadlight_four_models_owner_questionB_ownerNPV.xlsx
data/: capex.csv  income_analysis.csv  loan.csv  opex.csv  (+1 more)
(+34 files in other folders)
