[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emc-institutional-model"
version = "0.1.0"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.5",
  "numpy-financial>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
